--- a/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
+++ b/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
@@ -35,7 +35,7 @@
       "metadata": {
         "description": "Specifies the URI of the artifacts on GitHub"
       },
-      "defaultValue": "https://github.com/dennordsec/Azure-Sentinel-Nord-Test/blob/main/Solutions/NordPass/Data%20Connectors/deployment/"
+      "defaultValue": "https://raw.githubusercontent.com/dennordsec/Azure-Sentinel-Nord-Test/refs/heads/main/Solutions/NordPass/Data%20Connectors/deployment/"
     }
   },
   "resources": [
