--- a/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
+++ b/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
@@ -84,6 +84,9 @@
           },
           "tableName": {
             "value": "[reference('NordPassTable').outputs.tableName.value]"
+          },
+          "dataCollectionEndpointRaw": {
+            "value": "[reference('NordPassTable').outputs.dataCollectionEndpoint.value]"
           }
         }
       },
