--- a/Solutions/NordPass/Data Connectors/deployment/NordPass_function_app.json
+++ b/Solutions/NordPass/Data Connectors/deployment/NordPass_function_app.json
@@ -98,6 +98,7 @@
         "metricsPublisher": "[format('/subscriptions/){0}/providers/Microsoft.Authorization/roleDefinitions/3913510d-42f4-4e42-8a64-420c390055eb', subscription().subscriptionId)]",
         "uniqueRoleGuidMetricsPublisher": "[guid(resourceId('Microsoft.Storage/storageAccounts', variables('functionName')))]",
         "uniqueRoleGuidKeyVaultSecretReader": "[guid(resourceId('Microsoft.KeyVault/vaults', variables('functionName')))]",
+        "uniqueRoleGuidBlobReader": "[guid(resourceId('Microsoft.KeyVault/vaults', variables('functionName')))]",
         "keyVaultCryptoOfficer": "[subscriptionResourceId('Microsoft.Authorization/roleDefinitions', '14b46e9e-c2b7-41b4-b07b-48a6ebf60603')]"
     },
     "resources": [
@@ -439,7 +440,8 @@
         {
             "type": "Microsoft.Authorization/roleAssignments",
             "apiVersion": "2018-01-01-preview",
-            "name": "[concat(resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName')), '/providers/Microsoft.Authorization/roleAssignments/', guid(variables('storageAccountName'), variables('keyVaultCryptoOfficer')))]",
+            "name": "[variables('uniqueRoleGuidBlobReader')]",
+            "scope": "Workspace",
             "dependsOn": [
                 "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]",
                 "[resourceId('Microsoft.Web/sites', variables('functionName'))]"
@@ -447,7 +449,6 @@
             "properties": {
                 "roleDefinitionId": "[variables('keyVaultCryptoOfficer')]",
                 "principalId": "[reference(resourceId('Microsoft.Web/sites', variables('functionName')), '2019-08-01', 'full').identity.principalId]",
-                "scope": "Workspace"
             }
         }
     ],
