--- a/Solutions/NordPass/Data Connectors/deployment/NordPass_function_app.json
+++ b/Solutions/NordPass/Data Connectors/deployment/NordPass_function_app.json
@@ -96,10 +96,10 @@
         "storageAccountName": "[concat(parameters('storagePrefix'), uniqueString(resourceGroup().id))]",
         "keyVaultSecretReader": "[format('/subscriptions/){0}/providers/Microsoft.Authorization/roleDefinitions/4633458b-17de-408a-b874-0445c86b69e6', subscription().subscriptionId)]",
         "metricsPublisher": "[format('/subscriptions/){0}/providers/Microsoft.Authorization/roleDefinitions/3913510d-42f4-4e42-8a64-420c390055eb', subscription().subscriptionId)]",
+        "storageContributor": "[format('/subscriptions/){0}/providers/Microsoft.Authorization/roleDefinitions/ba92f5b4-2d11-453d-a403-e96b0029c9fe', subscription().subscriptionId))]",
         "uniqueRoleGuidMetricsPublisher": "[guid(resourceId('Microsoft.Storage/storageAccounts', variables('functionName')))]",
         "uniqueRoleGuidKeyVaultSecretReader": "[guid(resourceId('Microsoft.KeyVault/vaults', variables('functionName')))]",
-        "uniqueRoleGuidBlobReader": "[guid(resourceId('Microsoft.KeyVault/vaults', variables('functionName')))]",
-        "keyVaultCryptoOfficer": "[subscriptionResourceId('Microsoft.Authorization/roleDefinitions', '14b46e9e-c2b7-41b4-b07b-48a6ebf60603')]"
+        "uniqueRoleGuidBlobContributor": "[guid(resourceId('Microsoft.KeyVault/vaults', variables('functionName')))]"
     },
     "resources": [
         {
@@ -310,6 +310,19 @@
             }
         },
         {
+            "type": "Microsoft.Authorization/roleAssignments",
+            "apiVersion": "2020-04-01-preview",
+            "name": "[variables('uniqueRoleGuidBlobContributor')]",
+            "scope": "[format('Microsoft.Web/sites/{0}', variables('FunctionName'))]",
+            "dependsOn": [
+                "[resourceId('Microsoft.Web/sites/', variables('functionName'))]"
+            ],
+            "properties": {
+                "roleDefinitionId": "[variables('storageContributor')]",
+                "principalId": "[reference(resourceId('Microsoft.Web/sites', variables('FunctionName')), '2019-08-01', 'full').identity.principalId]"
+            }
+        },
+        {
             "type": "Microsoft.Web/serverfarms",
             "apiVersion": "2018-02-01",
             "name": "[variables('FunctionName')]",
@@ -436,20 +449,6 @@
             "dependsOn": [
                 "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]"
             ]
-        },
-        {
-            "type": "Microsoft.Authorization/roleAssignments",
-            "apiVersion": "2020-04-01-preview",
-            "name": "[variables('uniqueRoleGuidBlobReader')]",
-            "scope": "[concat('/subscriptions/', subscription().subscriptionId, '/resourceGroups/', resourceGroup().id, '/providers/Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]",
-            "dependsOn": [
-                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]",
-                "[resourceId('Microsoft.Web/sites', variables('functionName'))]"
-            ],
-            "properties": {
-                "roleDefinitionId": "[variables('keyVaultCryptoOfficer')]",
-                "principalId": "[reference(resourceId('Microsoft.Web/sites', variables('functionName')), '2019-08-01', 'full').identity.principalId]"
-            }
         }
     ],
     "functions": [
