--- a/Solutions/NordPass/Data Connectors/deployment/NordPass_function_app.json
+++ b/Solutions/NordPass/Data Connectors/deployment/NordPass_function_app.json
@@ -360,7 +360,7 @@
                 "clientAffinityEnabled": true,
                 "alwaysOn": true,
                 "siteConfig": {
-                    "powerShellVersion": "7.2"
+                    "windowsFxVersion": "1.0"
                 }
             }
         },
