--- a/Solutions/NordPass/Data Connectors/deployment/NordPass_function_app.json
+++ b/Solutions/NordPass/Data Connectors/deployment/NordPass_function_app.json
@@ -313,9 +313,9 @@
             "type": "Microsoft.Authorization/roleAssignments",
             "apiVersion": "2020-04-01-preview",
             "name": "[variables('uniqueRoleGuidBlobContributor')]",
-            "scope": "[format('Microsoft.Web/sites/{0}', variables('FunctionName'))]",
+            "scope": "[format('Microsoft.Storage/storageAccounts/{0}', variables('storageAccountName'))]",
             "dependsOn": [
-                "[resourceId('Microsoft.Web/sites/', variables('functionName'))]"
+                "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]"
             ],
             "properties": {
                 "roleDefinitionId": "[variables('storageContributor')]",
