--- a/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
+++ b/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
@@ -79,8 +79,8 @@
           "activitiesToken": {
             "value": "[parameters('activitiesToken')]"
           },
-          "immutableId": {
-            "value": "[reference('NordPassTable').outputs.immutableId.value]"
+          "dcrImmutableId": {
+            "value": "[reference('NordPassTable').outputs.dcrImmutableId.value]"
           },
           "tableName": {
             "value": "[reference('NordPassTable').outputs.tableName.value]"
