--- a/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
+++ b/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
@@ -22,7 +22,7 @@
       "metadata": {
         "description": "URI to the API endpoint to query data."
       },
-      "defaultValue": "https://api-activities.eu.nordpass.com/activities/query"
+      "defaultValue": "https://api-activities.us.nordpass.com/activities/query"
     },
     "activitiesToken": {
       "type": "securestring",
