--- a/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
+++ b/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
@@ -17,26 +17,21 @@
         "description": "Specifies the name of the Function App."
       }
     },
-    "activitiesEndpoint": {
+    "ApiURL": {
       "type": "string",
       "metadata": {
-        "description": "URI to the API endpoint to query data."
-      },
-      "defaultValue": "https://api-activities.us.nordpass.com/activities/query"
-    },
-    "activitiesToken": {
-      "type": "securestring",
-      "metadata": {
-        "description": "Specifies the API Key to connect to the API of NordPass"
+        "description": "The URL that accompanied the token  you created in NordPass’ Admin Panel."
       }
     },
-    "baseUri": {
-      "type": "string",
+    "Token": {
+      "type": "securestring",
       "metadata": {
-        "description": "Specifies the URI of the artifacts on GitHub"
-      },
-      "defaultValue": "https://raw.githubusercontent.com/dennordsec/Azure-Sentinel-Nord-Test/refs/heads/main/Solutions/NordPass/Data%20Connectors/deployment/"
+        "description": "The token you created in NordPass’ Admin Panel. Used to connect to NordPass’ API."
+      }
     }
+  },
+  "variables": {
+    "baseUri": "https://raw.githubusercontent.com/dennordsec/Azure-Sentinel-Nord-Test/refs/heads/main/Solutions/NordPass/Data%20Connectors/deployment/"
   },
   "resources": [
     {
@@ -71,13 +66,13 @@
             "value": "[parameters('functionName')]"
           },
           "activitiesEndpoint": {
-            "value": "[parameters('activitiesEndpoint')]"
+            "value": "[parameters('ApiURL')]"
           },
           "dcrEndpointUri": {
             "value": "[reference('NordPassTable').outputs.dcrEndpointUri.value]"
           },
           "activitiesToken": {
-            "value": "[parameters('activitiesToken')]"
+            "value": "[parameters('Token')]"
           },
           "dcrImmutableId": {
             "value": "[reference('NordPassTable').outputs.dcrImmutableId.value]"
