--- a/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
+++ b/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
@@ -17,7 +17,7 @@
         "description": "Specifies the name of the Function App."
       }
     },
-    "ApiURL": {
+    "API_URL": {
       "type": "string",
       "metadata": {
         "description": "The URL that accompanied the token  you created in NordPass’ Admin Panel."
@@ -31,7 +31,8 @@
     }
   },
   "variables": {
-    "baseUri": "https://raw.githubusercontent.com/dennordsec/Azure-Sentinel-Nord-Test/refs/heads/main/Solutions/NordPass/Data%20Connectors/deployment/"
+    "baseUri": "https://raw.githubusercontent.com/dennordsec/Azure-Sentinel-Nord-Test/refs/heads/main/Solutions/NordPass/Data%20Connectors/deployment/",
+    "functionName": "NordPass"
   },
   "resources": [
     {
@@ -63,7 +64,7 @@
         },
         "parameters": {
           "functionName": {
-            "value": "[parameters('functionName')]"
+            "value": "[variables('functionName')]"
           },
           "activitiesEndpoint": {
             "value": "[parameters('ApiURL')]"
