--- a/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
+++ b/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
@@ -17,12 +17,11 @@
         "description": "Specifies the name of the Function App."
       }
     },
-    "ApiURL": {
+    "API_URL": {
       "type": "string",
       "metadata": {
         "description": "The URL that accompanied the token  you created in NordPass’ Admin Panel."
-      },
-      "label":"API URL"
+      }
     },
     "Token": {
       "type": "securestring",
