--- a/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
+++ b/Solutions/NordPass/Data Connectors/azuredeploy_NordPass_API_FunctionApp.json
@@ -67,7 +67,7 @@
             "value": "[variables('functionName')]"
           },
           "activitiesEndpoint": {
-            "value": "[parameters('ApiURL')]"
+            "value": "[parameters('API_URL')]"
           },
           "dcrEndpointUri": {
             "value": "[reference('NordPassTable').outputs.dcrEndpointUri.value]"
